test and fusion code of many project. 01

--- a/server/app/config/config.json
+++ b/server/app/config/config.json
@@ -1,12 +1,14 @@
 {
     "db": {
-        "username": "<MongoDBUsername>",
-        "password": "<MongoDBPassword>",
-        "host": "<MongoDBHost>",
-        "port": "<MongoDBPort>",
-        "name": "<MongoDBName>"
+        "secret": "nodeauthsecret",
+        "database": "mongodb://localhost:27017/job-monitoring",
+        "username": "",
+        "password": "",
+        "host": "127.0.0.1",
+        "port": "27017",
+        "name": "job-monitoring"
     },
-    "sessionSecret": "<RandomString>",
+    "sessionSecret": "sessionsecret",
     "redis": {
         "host": "127.0.0.1",
         "port": 6379,
