--- a/server/package.json
+++ b/server/package.json
@@ -22,10 +22,15 @@
     "body-parser": "^1.18.2",
     "connect-flash": "^0.1.1",
     "connect-mongo": "^2.0.1",
+    "cookie-parser": "^1.4.3",
     "express": "^4.16.2",
     "express-session": "^1.15.6",
+    "jade": "^1.11.0",
+    "jsonwebtoken": "^8.2.0",
     "mongoose": "^5.0.9",
+    "morgan": "^1.9.0",
     "passport": "^0.4.0",
+    "passport-jwt": "^3.0.1",
     "passport-local": "^1.0.0",
     "redis": "^2.8.0",
     "socket.io": "^2.0.4",
